# anki-creator

./: .gitignore  README.md  einführung.apkg  pyproject.toml
input/: 1 Einführung.md  10 Einstellungen II.md  2 Motivation.md  3 Wahrnehmung.md  4 Geheime Verführer.md  5 Sprache und Verstehen.md  6 Kategorisierung.md  7 Gedächtnis.md  8 Sozialer Einfluss.md  9 Einstellung und Einstellungsänderung.md
input/docx/: 1 Einführung.docx  1 Einführung.formatted.md  10 Einstellungen II.docx  2 Motivation.docx  3 Wahrnehmung.docx  4 Geheime Verführer.docx  5 Sprache und Verstehen.docx  6 Kategorisierung.docx  7 Gedächtnis.docx  8 Sozialer Einfluss.docx  9 Einstellung und Einstellungsänderung.docx
src/anki_creator/: anki.py  cards.py  cli.py  logging.py  markdown.py
