[project]
name = "anki-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "genanki>=0.13.1",
    "markdown>=3.7",
    "markitdown",
    "md2pdf>=1.0.1",
    "mdformat>=0.7.19",
    "openai>=1.57.1",
]

[project.scripts]
anki-creator = "anki_creator.cli:main"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv.sources]
markitdown = { git = "https://github.com/microsoft/markitdown" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["ruff>=0.8.3"]
